fixed the issue with drop-down menu options of z-index related problem which i fixed my adding a a z-index:50; to .search-container & fixed the issue with range input type number where border-left is not applied i didn't found the reason behind this but i solved it by adding border: 1px solid black; and border-radius: 2px; 3rd i modified the product-card and added a anchor tag to product image container and it's title; so that routing will be easy. later when we actually work with API's we will use event delegation and use event.stopPropagation() when user clicks on .wishlist-btn which is wrapped with it's parent anchor tag. which will redirect to page even when user clicks on wishlist button;

--- a/JAVASCRIPT/Projects/E-Commerce Web Application/styles/product-card.css
+++ b/JAVASCRIPT/Projects/E-Commerce Web Application/styles/product-card.css
@@ -16,6 +16,15 @@
   box-shadow: 0px 21px 44px rgba(0, 0, 0, 0.08);
 }
 
+.product-card-item a{
+  display: block;
+  text-decoration: none;
+  color: black;
+}
+.product-card-item a:hover{
+  color: #5518AB;
+}
+
 .product-card-item > .product-card-top-box{
   width: 100%;
   height: 50%;
@@ -79,9 +88,11 @@
   /* background-size: cover; */
 }
 
-.product-card-item > h3{
+.product-card-item > .h3{
   margin-top: 1rem;
   margin-bottom: 0.4rem;
+  font-size: larger;
+  font-weight: bold;
   text-transform: capitalize;
 }
 
